--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: 'Lato', sans-serif;
+}
+
 .dark-theme {
   background-color: #1f1e1e00;
   color: #ffffff;
