--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+.active {
+  @apply text-2xl
+}
+
 .dark-theme {
   background-color: #1f1e1e00;
   color: #ffffff;
