--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,16 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+.brand-font {
+  font-family: 'Lilita One', cursive;
+}
+
 .active {
   @apply text-2xl
+}
+
+.btn-gl {
+  @apply btn btn-ghost mx-auto hover:bg-blue-600 border-4 border-b-blue-600 hover:text-slate-200
 }
 
 .dark-theme {
