--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
-.brand-font {
-  font-family: 'Lilita One', cursive;
-}
+/* .brand-font {
+  font-family: 'Josefin Sans', sans-serif;
+} */
 
 .active {
   @apply text-2xl
